# Arcana

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.claude/: settings.json
.claude/skills/pack-manager/: SKILL.md
.claude/skills/phan-site/: SKILL.md
.claude/skills/velvet-room/: SKILL.md
data-example/: achievement_progress.json  loaded_packs.json  missions.json  status.json  status_metric_definitions.json  user_profile.json  weather.json
data-example/packs/arcana/: achievements.json  manifest.json  skills.json
docs/: agent_config.example.json  ai_agent_integration.md  architecture.md  directory_structure.md  ui_design_spec.md  visual_design_guidelines.md  visual_style_guide.md
docs/schema/: README.md  achievements.md  ai_changelog.md  content_packs.md  crafting.md  items.md  mission_memory.md  missions.md  skills.md  status.md  tasks.md  ui_events.md
scripts/: config.example.json  extract_maker_trees.py  fetch_bangumi.py  fetch_douban.py  fetch_steam.py  generate_packs.py  process_assets.py  remove_bg.py  validate_data.py
scripts/dev/: process_assets.py  remove_bg.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: bus.rs  config.rs  llm.rs  mod.rs  prompt.rs  runner.rs  session.rs  tools.rs
src-tauri/src/agent/channels/: telegram.rs
src-tauri/src/commands/: achievements.rs  crafting.rs  gallery.rs  items.rs  missions.rs  mod.rs  skills.rs  status.rs  ui_events.rs  weather.rs
src-tauri/src/models/: achievement.rs  crafting.rs  gallery.rs  item.rs  mission.rs  mod.rs  skill.rs  status.rs  ui_event.rs  weather.rs
src-tauri/src/services/: achievement.rs  changelog.rs  context.rs  file_access.rs  memory.rs  mission.rs  mod.rs  status.rs  ui_events.rs
src-tauri/src/storage/: date_utils.rs  json_store.rs  mod.rs  settings.rs  validate.rs
src/lib/: Calendar.svelte  CallingCardText.svelte  CollageLabel.svelte  KeyHint.svelte  MenuItem.svelte  P5Calendar.svelte  P5CollageLabel.svelte  P5KeyHint.svelte  P5MenuItem.svelte  P5PromptWord.svelte  P5Text.svelte  PhanSiteProgress.svelte  PromptWord.svelte
src/lib/components/: CardTitle.svelte  RadarChart.svelte  SkillNebula.svelte
src/lib/screens/: AchievementsScreen.svelte  GalleryScreen.svelte  ItemsScreen.svelte  MissionsScreen.svelte  SkillsScreen.svelte  StatusDetailView.svelte  StatusScreen.svelte
src/lib/types/: achievement.ts  crafting.ts  gallery.ts  item.ts  mission.ts  skill.ts  status.ts  ui_event.ts
src/lib/utils/: cardTitle.ts  format.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
