[package]
name = "arcana"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "arcana"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arcana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-cli"
path = "src/bin/agent_cli.rs"

[[bin]]
name = "agent-telegram"
path = "src/bin/agent_telegram.rs"

[[bin]]
name = "arcana-data"
path = "src/bin/arcana_data.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "throttle", "cache-me"] }
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
regex = "1"
percent-encoding = "2"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
